2004-07-22  Christian Neumair  <chris@gnome-de.org>

	* gnome-keyboard-properties.glade: Use GTK_SHADOW_IN shadow for
	all treeviews (consistency). Fixes #144050.

2004-07-14  Sergey V. Udaltsov <svu@gnome.org>

	* Merged the preview tab branch.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* gnome-keyboard-properties.c: (dialog_response): Update help link
	to point to user-guide.xml

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-11  Richard Hult  <richard@imendio.com>

	* gnome-keyboard-properties.glade:
	* gnome-keyboard-properties.c (setup_dialog): Enable markup for
	the break enabled toggle with code instead of with a custom child
	for the toggle since that doesn't work with new libglade. Fixes
	bug #131122.

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

Mon Aug 11 11:50:36 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keyboard-properties.glade: Patch from Elijah Newren
	<newren@math.utah.edu> to bring the possible repeat range in sync
	with the a11y capplet.

	* gnome-keyboard-properties.c: Patch from Elijah Newren to deal
	with the change in the peditor code.

Fri Aug  1 15:04:39 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keyboard-properties.glade: Patch from Dennis Cranston
	<dennis_cranston@yahoo.com> to add two more pixels of spacing
	between action area and vbox of prefrences dialog.

Thu Jul 31 17:42:13 2003  Jonathan Blandford  <jrb@redhat.com>
