@@ -1,3 +1,13 @@
+2004-07-27  Sergey V. Udaltsov <svu@gnome.org>
+
+	* The preview is separated to another window. 
+	Looks nicer IMHO - but it depends on POV.
+
+2004-07-26  Sergey V. Udaltsov <svu@gnome.org>
+
+	* Now models are handled using the popup window. 
+	Looks a bit more polished.
+
 2004-07-22  Christian Neumair  <chris@gnome-de.org>
 
 	* gnome-keyboard-properties.glade: Use GTK_SHADOW_IN shadow for
